# sourmash_plugin_load_urls

./: .gitignore  README.md  pyproject.toml
src/: sourmash_plugin_load_urls.py
tests/: test_sourmash_plugin_load_urls.py
tests/test-data/: a-manifest.csv
