[project]
name = "sourmash_plugin_load_urls"
description = "sourmash plugin to load signature files from URLs with fsspec."
readme = "README.md"
requires-python = ">=3.8"
version = "0.2"

dependencies = ["fsspec", "requests", "aiohttp", 'sourmash>=4.6.1,<5']

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.load_from"]
url_reader = "sourmash_plugin_load_urls:load_sketches"
